--- a/docker-compose-cli.yaml
+++ b/docker-compose-cli.yaml
@@ -55,6 +55,7 @@ services:
     image: hyperledger/fabric-tools
     tty: true
     environment:
+      - CORE_VM_DOCKER_ATTACHSTDOUT=true
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_LOGGING_LEVEL=DEBUG
